rspec-tools/tests/resources/invalid-asciidoc/wrong_ifdef.adoc
Some content followed by an ifdef

ifdef::mytest,rspecator-view[]

This ifdef is wrong because we don't open it with the expected values

endif::env-github,rspecator-view[]
